[gd_scene load_steps=2 format=3 uid="uid://bg80j5xh2a8ck"]

[ext_resource type="Script" path="res://Maps/ExteriorScenes.gd" id="1_6rhy2"]

[node name="ExteriorScenes" type="ParallaxBackground"]
script = ExtResource("1_6rhy2")

[node name="ParallaxLayer" type="ParallaxLayer" parent="."]

[node name="Background" type="Sprite2D" parent="ParallaxLayer"]
centered = false

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="ToggleControlsTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="timeout" from="ToggleControlsTimer" to="." method="_on_toggle_controls_timer_timeout"]
